<resources>
    <string name="app_name">COMP4521_Group22</string>
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="importance">Importance:</string>
    <string name="datepicker">Datepicker</string>
    <string name="progress">Progress</string>
    <string name="deadline">Deadline:</string>
    <string name="description">Description</string>
    <string name="edit">EDIT</string>
    <string name="entry">ENTRY</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="habit">Habit</string>
    <string name="new_task">New Task</string>
    <string name="_00">00</string>
    <string name="delete">Delete</string>
    <string name="calendar">Calendar</string>
    <string name="list">List</string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="tue">TUE</string>
    <string name="mon">MON</string>
    <string name="sun">SUN</string>
    <string name="april_2024">April 2024</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="id">ID</string>
    <string name="view_all_todo"><u>View All Todo</u></string>
    <string name="clear">Clear</string>
    <string name="repeat">Repeat</string>
    <string name="_1">1</string>
    <string name="reduce">reduce</string>
    <string name="frequency">Frequency:</string>
    <string name="new_habbit">New Habbit</string>
    <string name="todo">Todo</string>
    <string name="modify">Modify</string>
    <string name="habit_summary">Habit Summary</string>
    <string name="habit_description">Habit Description</string>
</resources>