<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:textAlignment="viewStart"
    tools:context=".EditTodo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4E4E4E"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_todo_btnBack"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingStart="10dp"
            android:text="@string/back"
            android:textColor="#C1C1C1"
            app:autoSizeTextType="uniform"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/edit_todo_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:text="@string/edit"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/edit_todo_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:text="@string/_00"
            android:textAlignment="viewEnd"
            android:textColor="#AEAEAE"
            app:autoSizeTextType="uniform"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_todo_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="#D8D8D8"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="#000000"
        android:textColorHint="#616161"
        android:textSize="40sp"
        tools:ignore="LabelFor,RtlSymmetry"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_todo_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="#787878"
        android:textSize="20sp"
        android:autofillHints="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/edit_todo_deadline_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="0dp"
            android:text="@string/deadline"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/edit_todo_deadline_datepicker_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/edit_todo_datepickerbutton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/datepicker"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/baseline_date_range_24" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_todo_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/progress"
        android:inputType="textMultiLine"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:textColorHint="#787878"
        android:textSize="20sp"
        android:autofillHints="@string/progress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:id="@+id/edit_todo_importance_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/importance"
            android:textAlignment="viewStart"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/edit_todo_importance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/edit_todo_importance_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="48dp"
                android:background="@drawable/border_green"
                android:button="@null"
                android:checked="false" />

            <RadioButton
                android:id="@+id/edit_todo_importance_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_orange"
                android:button="@null" />

            <RadioButton
                android:id="@+id/edit_todo_importance_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_red"
                android:button="@null" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/edit_todo_delete"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="#FF6E6E"
            android:text="@string/delete" />

        <Button
            android:id="@+id/edit_todo_submit"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:backgroundTint="#AEFF74"
            android:text="Put" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/edit_todo_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>