<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".InputTodo">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#4E4E4E"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_habit_btnBack"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:text="@string/back"
                android:textColor="#C1C1C1"
                app:autoSizeTextType="uniform"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="2"
                android:text="@string/entry"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/btnHabit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingEnd="10dp"
                android:text="@string/habit"
                android:textAlignment="viewEnd"
                android:textColor="#AEAEAE"
                app:autoSizeTextType="uniform"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

        <EditText
            android:id="@+id/todo_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:autofillHints="@string/new_task"
            android:background="#EAEAEA"
            android:ems="10"
            android:hint="@string/new_task"
            android:inputType="text"
            android:paddingStart="20dp"
            android:textColor="#000000"
            android:textColorHint="#616161"
            android:textSize="40sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/todo_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="25dp"
            android:autofillHints="@string/description"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColorHint="#787878"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="20dp"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/todo_deadline_tv"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="@string/deadline"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/todo_deadline_datepicker_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="20sp" />

            <ImageButton
                android:id="@+id/todo_datepickerbutton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/datepicker"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/baseline_date_range_24" />
        </LinearLayout>

        <EditText
            android:id="@+id/todo_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/progress"
            android:inputType="textMultiLine"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textColorHint="#787878"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:paddingLeft="25dp"
            android:paddingRight="25dp">

            <TextView
                android:id="@+id/todo_importance_tv"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/importance"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/todo_importance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/todo_importance_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:height="48dp"
                    android:background="@drawable/border_green"
                    android:button="@null"
                    android:checked="true" />

                <RadioButton
                    android:id="@+id/todo_importance_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_orange"
                    android:button="@null" />

                <RadioButton
                    android:id="@+id/todo_importance_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_red"
                    android:button="@null" />
            </RadioGroup>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/input_todo_reset"
            style="@style/button_dark_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rectangle_button"
            android:text="Clear" />

        <Button
            android:id="@+id/todo_submit"
            style="@style/button_dark_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:background="@drawable/rectangle_button"
            android:backgroundTint="@color/dark_green"
            android:backgroundTintMode="add"
            android:text="Submit" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout5" />

</androidx.constraintlayout.widget.ConstraintLayout>