<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:foregroundTint="#F6F6F6"
    android:orientation="vertical"
    tools:context=".TodoListView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_main_todo_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/todo_nav"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragment_list_add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/add"
            android:scaleType="fitXY"
            android:src="@drawable/baseline_add_24"
            app:backgroundTint="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/todo_nav"
            app:layout_constraintEnd_toEndOf="@+id/activity_main_todo_list"
            app:tint="@color/white" />


        <LinearLayout
            android:id="@+id/todo_nav"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#BDBDBD"
            android:orientation="horizontal"
            android:padding="7dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/list"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/baseline_density_medium_24"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/list_date"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:visibility="gone"
                    app:autoSizeTextType="uniform" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/list_view_bottom_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:backgroundTint="#FFFFFF"
                android:contentDescription="@string/calendar"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/baseline_date_range_24"
                app:tint="#858585" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>